--- a/Groce_Josefa_Registration_Form.html
+++ b/Groce_Josefa_Registration_Form.html
@@ -38,7 +38,7 @@
 
         <p>
             <label for="birthday">Birthday:</label>
-            <input type="text" id="birthday" name="birthday">
+            <input type="date" id="birthday" name="birthday">
         </p>
         <p>Select your gender:</p>
         <select name="gender">
